<resources>
    <string name="app_name">BoardGameCollector</string>
    <string name="position">Position: </string>
    <string name="input">Input name and surname </string>
    <string name="name">Name:  </string>
    <string name="gammm">Choose games to import:  </string>
    <string name="sel">Reverse</string>
    <string name="surname">Surname:  </string>
    <string name="Add">Add</string>
    <string name="Cancel">Cancel</string>
    <string name="nohist">There is no rank history to show </string>
    <string name="rank">Rank: </string>
    <string name="Until">Until: </string>
    <string name="addGameAlertTitle">Game Title</string>
    <string name="addGameAlertEnter">Enter Title</string>
    <string name="Locations">Locations</string>
    <string name="addlocation">Add Location</string>
    <string name="title">Title</string>
    <string name="original_title">Original Title</string>
    <string name="release_year">Release year</string>
    <string name="description">Description</string>
    <string name="order_date">Order date</string>
    <string name="add_date">Add date</string>
    <string name="cost">Cost</string>
    <string name="scd">SCD</string>
    <string name="ean">EAN</string>
    <string name="bgg_id">BGG ID</string>
    <string name="production_code">Production Code</string>
    <string name="ranking">Ranking</string>
    <string name="type">Type</string>
    <string name="comment">Comment</string>
    <string name="thumbnail_url">Thumbnail URL</string>
    <string name="location">Location</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="image_link">Image Link</string>
    <string name="back">Back</string>
    <string name="expansions">Expansions</string>
    <string name="bgg_fetch">BGG fetch</string>
    <string name="main_game_bgg_id">Main game BGG ID</string>
    <string name="owned_expansion">Owned expansion</string>
    <string name="artists">Artists</string>
    <string name="designers">Designers</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="bgg">BGG</string>
    <string name="update_rankings">Update Rankings</string>
    <string name="fetch_collection">Fetch Collection</string>
    <string name="importCollection">Import Collection</string>
    <string name="username">Username</string>
    <string name="nameloc">Name</string>
    <string name="commentloc">Comment</string>
    <string name="location_name">Location Name</string>
    <string name="games_in_location">Games in location:</string>
    <string name="ToastSave">Changes saved.</string>
    <string name="delete">Delete</string>
    <string name="name33">Sort by Name</string>
    <string name="date33">Sort by Date</string>
    <string name="rank33">Sort by Rank</string>
    <string name="show_extensions">Show extensions</string>
    <string name="Error">Cannot delete not-empty location</string>
    <string name="persons">"Choose person: "</string>
    <string name="edit2">Edit</string>
    <string name="game_list">Game list:</string>
    <string name="search">Search</string>
    <string name="emptyElement">None</string>
    <string name="Comment">Comment</string>
    <string name="location_comment">Location Comment</string>
    <string name="noData">No title/bggID</string>
    <string name="newRank">New Ranking:</string>
</resources>