<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LocDetailsActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.5">

</Space>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/location_name" />

            <EditText
                android:id="@+id/Name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"

                android:inputType="textPersonName" />
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3">

        </Space>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_comment" />

            <EditText
                android:id="@+id/Comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:inputType="textMultiLine"

                />
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2">

        </Space>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="horizontal">
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2">

            </Space>
            <Button
                android:id="@+id/Delete"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/delete" />
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

            </Space>
            <Button
                android:id="@+id/Save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save" />
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2">

            </Space>
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/games_in_location" />

        <ListView
            android:id="@+id/List"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" >

        </ListView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>